force-app/main/default/objects/TVE_Docusign__mdt/TVE_Docusign__mdt.object-meta.xml
<CustomObject>
    <label>TVE Docusign</label>
    <pluralLabel>TVE Docusign</pluralLabel>
</CustomObject>