force-app/main/default/objects/TVE_Docusign__mdt/fields/ContentDocumentName__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentName__c</fullName>
    <label>ContentDocumentName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>