force-app/main/default/objects/TVE_Docusign__mdt/fields/Contract_BrandID__c.field-meta.xml
<CustomField>
    <fullName>Contract_BrandID__c</fullName>
    <label>Contract BrandID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>