force-app/main/default/objects/TVE_Docusign__mdt/fields/Reminder_120__c.field-meta.xml
<CustomField>
    <fullName>Reminder_120__c</fullName>
    <label>Reminder_120</label>
    <length>20</length>
    <type>Text</type>
</CustomField>