force-app/main/default/objects/TVE_Docusign__mdt/fields/Reminder_60__c.field-meta.xml
<CustomField>
    <fullName>Reminder_60__c</fullName>
    <description>Reminder and Expiry settings for DocuSign Emails</description>
    <label>Reminder_60</label>
    <length>20</length>
    <type>Text</type>
</CustomField>