force-app/main/default/objects/TVE_Docusign__mdt/fields/TaskContractRecordType__c.field-meta.xml
<CustomField>
    <fullName>TaskContractRecordType__c</fullName>
    <label>TaskContractRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>