force-app/main/default/objects/TVE_Docusign__mdt/fields/TaskOfferRecordType__c.field-meta.xml
<CustomField>
    <fullName>TaskOfferRecordType__c</fullName>
    <label>TaskOfferRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>